--- a/article/templates/add_article.html
+++ b/article/templates/add_article.html
@@ -7,20 +7,27 @@
     input{
         margin-bottom:20px;
     }
+    #addArticle{
+        height:500px;
+        width:500px;
+        margin:0 auto;
+    }
 </style>
 </head>
 <body>
-   <form action="." method="post">{% csrf_token %}
-       <b>文章标题</b>
-       <input type="text" name="title" placeholder="请输入文章标题"/>
-       <br/>
-       <b>作者</b><input type="text" name="author"/>
-       <br/>
-       <b>文章内容</b>
-       <div>
-         <textarea rows="20" cols="50" style="resize:none;" name="content"></textarea>
-       </div>
-       <input type="submit" value="发布">
-   </form>
+    <div id="addArticle">
+        <form action="." method="post">{% csrf_token %}
+           <b>文章标题</b>
+           <input type="text" name="title" placeholder="请输入文章标题"/>
+           <br/>
+           <b>作者</b><input type="text" name="author"/>
+           <br/>
+           <b>文章内容</b>
+           <div>
+             <textarea rows="20" cols="50" style="resize:none;" name="content"></textarea>
+           </div>
+           <input type="submit" value="发布">
+         </form>
+    </div>
 </body>
 </html>
