article module update

--- a/article/templates/articleBase.html
+++ b/article/templates/articleBase.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}文章{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/static/images/bitbug_favicon.ico" type="image/x-icon" />
+    <link href="/static/css/base.css" rel="stylesheet">
+    <link href="/static/css/index.css" rel="stylesheet">
+    <link href="/static/css/m.css" rel="stylesheet">
+    <script src="/static/js/jquery.min.js" type="text/javascript"></script>
+    <script src="/static/js/jquery.easyfader.min.js"></script>
+    <script src="/static/js/scrollReveal.js"></script>
+    <script src="/static/js/common.js"></script>
 </head>
 <body>
 {#{% include 'nav.html' %}#}
