--- a/article/templates/articlelist.html
+++ b/article/templates/articlelist.html
@@ -1,10 +1,26 @@
-{% extends "articleBase.html" %}
-
-{% load staticfiles %}
-
-{% block title %}article list{% endblock %}
-
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>文章管理列表</title>
+<link rel="stylesheet"  href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet"  href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+<style>
+    input{
+        margin-bottom:20px;
+    }
+    #header{
+        margin-top:10px;
+        width:100%;height:50px;
+        text-align: center;
+        font-size: 20px;
+    }
+</style>
+</head>
+<body>
+<div id="header" >
+    <b>文章后台统计列表</b>
+</div>
 <div>
     <table class="table table-hover">
        <tr>
@@ -13,6 +29,7 @@
            <td>文章作者</td>
            <td>栏目</td>
            <td>阅读量</td>
+           <td>更新时间</td>
        </tr>
        {% for article in articles %}
        <tr>
@@ -21,8 +38,12 @@
            <td>{{ article.article_author }}</td>
            <td>{{ article.article_column }}</td>
            <td >{{ article.article_views_count }}</td>
+           <td >{{ article.article_update_time }}</td>
        </tr>
        {% endfor %}
    </table>
 </div>
-{% endblock %}
+</body>
+<script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+</html>
