--- a/article/templates/hotArticle.html
+++ b/article/templates/hotArticle.html
@@ -6,7 +6,7 @@
 
 {% block container %}
     <div class="container">
-        <h1 class="t_nav"><span>不要轻易放弃。学习成长的路上，我们长路漫漫，只因学无止境。 </span>
+        <h1 class="t_nav"><span>一个专注于技术可以两天不出门的技术宅 </span>
           <p class="n1">文章列表</p>
         </h1>
         <!--blogsbox begin-->
@@ -346,31 +346,30 @@
             </ul>
           </div>
           <div class="cloud">
-            <h2 class="hometitle">标签云</h2>
+            <h2 class="hometitle">我的标签</h2>
             <ul>
-              <a href="#">陌上花开</a> <a href="#">校园生活</a> <a href="#">html5</a> <a href="#">SumSung</a> <a href="#">青春</a> <a
-                href="#">温暖</a> <a href="#">阳光</a> <a href="#">三星</a><a href="#">索尼</a> <a href="#">华维荣耀</a> <a href="#">三星</a>
-              <a href="#">索尼</a>
+               <a href="#">python</a> <a href="#">javascript</a> <a href="#">热血</a> <a
+                href="#">程序猿</a> <a href="#">运动</a>
             </ul>
           </div>
-          <div class="links">
-            <h2 class="hometitle">友情链接</h2>
-            <ul>
-              <li><a href="#" target="_blank">达内</a></li>
-              <li><a href="#" target="_blank">亿元级IT教育领军企业</a></li>
-              <li><a href="#" target="_blank">人工智能改变世界</a></li>
-            </ul>
-          </div>
-          <div class="guanzhu" id="follow-us">
-            <h2 class="hometitle">关注我们 么哒！</h2>
-            <ul>
-              <li class="sina"><a href="#" target="_blank"><span>微信公众号</span>达内</a></li>
-              <li class="tencent"><a href="#" target="_blank"><span>微信咨询</span>XXX</a></li>
-              <li class="qq"><a href="#" target="_blank"><span>QQ号</span>XXXXXX</a></li>
-              <li class="email"><a href="#" target="_blank"><span>邮箱帐号</span>tedu.cn</a></li>
-              <li class="wxgzh"><a href="#" target="_blank"><span>咨询电话</span>xxxxxxxxxxx</a></li>
-            </ul>
-          </div>
-        </div>
+{#          <div class="links">#}
+{#            <h2 class="hometitle">友情链接</h2>#}
+{#            <ul>#}
+{#              <li><a href="#" target="_blank"></a></li>#}
+{#              <li><a href="#" target="_blank"></a></li>#}
+{#              <li><a href="#" target="_blank"></a></li>#}
+{#            </ul>#}
+{#          </div>#}
+{#          <div class="guanzhu" id="follow-us">#}
+{#            <h2 class="hometitle">关注我们 么哒！</h2>#}
+{#            <ul>#}
+{#              <li class="sina"><a href="#" target="_blank"><span>微信公众号</span></a></li>#}
+{#              <li class="tencent"><a href="#" target="_blank"><span>微信咨询</span>XXX</a></li>#}
+{#              <li class="qq"><a href="#" target="_blank"><span>QQ号</span>XXXXXX</a></li>#}
+{#              <li class="email"><a href="#" target="_blank"><span>邮箱帐号</span>tedu.cn</a></li>#}
+{#              <li class="wxgzh"><a href="#" target="_blank"><span>咨询电话</span>xxxxxxxxxxx</a></li>#}
+{#            </ul>#}
+{#          </div>#}
+{#        </div>#}
     </div>
 {% endblock %}
