--- a/article/templates/addArticle.html
+++ b/article/templates/addArticle.html
@@ -4,31 +4,69 @@
     <meta charset="UTF-8">
     <title>添加文章</title>
 <style>
-    input{
-        margin-bottom:20px;
+    p{vertical-align: middle;height: 40px;}
+    label{display: inline-block;color: dimgrey;width:90px;font-weight:600;font-size: 16px;}
+    span{color: dimgrey;font-weight:600;font-size: 16px;}
+    #header{
+        margin-top:10px;
+        width:100%;height:60px;
+        text-align: center;
+        font-size: 35px;color: #2E2D2D;
+    }
+    .input{
+        margin-bottom: 20px;margin-left:30px;
+        outline: none;
+        border: 1px solid #A8A8A8;
+        border-radius: 5px;
+        height: 25px;width: 200px;
+    }
+    .submit{
+        outline: none;
+        width: 60px;height:28px;
+        background-color: #1e8ec5;
+        border: 1px solid white;
+        border-radius: 3px;
+        color: #2F4F4F;
     }
     #addArticle{
-        height:500px;
-        width:500px;
-        margin:0 auto;
+        height: 500px;
+        width: 500px;
+        margin: 0 auto;
     }
+    #outer{position: absolute;top:70px;right:50px;margin:0;
+        width: 100px;height: 30px;
+        text-align: center;}
+    #login,#register{font-weight: 500;font-size: 16px;}
+    #login:hover,#register:hover{color: dodgerblue;}
 </style>
 </head>
 <body>
+    <div id="header" >
+        <b>文章发布管理界面</b>
+    </div>
+    <div id="outer">
+        <span id="login">登录</span><span>&nbsp;| &nbsp;</span><span id="register">注册</span>
+    </div>
     <div id="addArticle">
         <form action="." method="post">{% csrf_token %}
-           <b>文章标题</b>
-           <input type="text" name="title" placeholder="请输入文章标题"/>
-           <br/>
-           <b>作者</b><input type="text" name="author"/>
-           <br/>
-           <b>栏目</b><input type="text" name="column"/>
-           <br/>
-           <b>文章内容</b>
-           <div>
-             <textarea rows="20" cols="50" style="resize:none;" name="content"></textarea>
-           </div>
-           <input type="submit" value="发布">
+            <p>
+                <label>文章标题</label>
+                <input class="input" type="text" name="title" placeholder="请输入文章标题"/>
+            </p>
+            <p>
+                <label>作者</label><input class="input" type="text" name="author"/>
+                <br/>
+            </p>
+            <p>
+                <label>栏目</label><input class="input" type="text" name="column"/>
+            </p>
+            <span>文章内容</span>
+            <div>
+                 <textarea  rows="20" cols="50" style="resize:none;outline:none" name="content"></textarea>
+            </div>
+            <p>
+                <input class="submit" type="submit" value="发布">
+            </p>
          </form>
     </div>
 </body>
